<resources>
    <string name="app_name">Consure</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_description">Let\'s get started</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">I agree to the <font color="#FF5C5DE0">Terms &amp; Conditions</font> and <font color="#FF5C5DE0">Privacy Policy</font></string>
    <string name="crate_account">Create Account</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign Up with Google</string>
    <string name="already_have_an_account">Already have an account? <font color="#FF5C5DE0">Sign In</font></string>
    <string name="title_home">Home</string>
    <string name="title_find_expert">Find Expert</string>
    <string name="title_expert_talk">Expert Talk</string>
    <string name="title_profile">Profile</string>
    <string name="tagline">Discover your future in Consure</string>
    <string name="expert_category">Expert Category</string>
    <string name="career">Career</string>
    <string name="competition">Competition</string>
    <string name="scholarships">Scholarships</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_description">Sign in to continue</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember Me</string>
    <string name="don_t_have_an_account">Don\'t have an account? <font color="#FF5C5DE0">Sign Up</font> </string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="add_photo_description">Add a profile photo to help people make a good impression on you</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>