<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:exb_color="@color/primary_100"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_find_expert"
        android:icon="@drawable/ic_search"
        app:exb_color="@color/primary_100"
        android:title="@string/title_find_expert"/>

    <item
        android:id="@+id/navigation_expert_talk"
        android:icon="@drawable/ic_chat"
        app:exb_color="@color/primary_100"
        android:title="@string/title_expert_talk"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        app:exb_color="@color/primary_100"
        android:title="@string/title_profile"/>

</menu>