<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.auth.register.RegisterPhotoFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_back_black_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginTop="82dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintTop_toBottomOf="@id/ivBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/add_profile_photo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toBottomOf="@id/iv_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_add_photo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="72dp"
        android:text="@string/add_photo_description"
        android:textColor="@color/font_disable_2"
        android:textSize="13sp"
        android:fontFamily="@font/inter"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_add_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="42dp"
        android:backgroundTint="@color/primary_100"
        android:text="@string/add_a_photo"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_semibold"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_photo_description"/>

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skip"
        android:textColor="@color/primary_100"
        android:textSize="16sp"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintTop_toBottomOf="@id/btn_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>