<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.auth.register.RegisterFragment">

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_arrow_back_24"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/font_active"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/iv_arrow_back"
        app:layout_constraintTop_toBottomOf="@+id/iv_arrow_back" />

    <TextView
        android:id="@+id/tv_sign_up_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/sign_up_description"
        android:textColor="@color/font_disable_2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/username"
        android:textColor="@color/font_active"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_description" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="#EEEEEE"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:inputType="text"
            android:textColor="@color/font_active"
            android:textColorHint="@color/font_disable_2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/email"
        android:textColor="@color/font_active"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/til_username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxBackgroundColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textEmailAddress"
            android:textColor="@color/font_active"
            android:textColorHint="@color/font_disable_2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/password"
        android:textColor="@color/font_active"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/til_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxBackgroundColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textPassword"
            android:textColor="@color/font_active"
            android:textColorHint="@color/font_disable_2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_terms_and_conditions"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"

        android:buttonTint="@color/primary_100"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:id="@+id/tv_terms_and_policy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/font_disable_2"
        android:fontFamily="@font/inter"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/cb_terms_and_conditions"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintTop_toTopOf="@id/cb_terms_and_conditions"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:backgroundTint="@color/primary_100"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/crate_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_and_policy" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/or"
        android:textColor="@color/font_disable_2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/btn_create_account"
        app:layout_constraintEnd_toEndOf="@id/btn_create_account"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

    <View
        android:id="@+id/separator_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        android:background="#FFC4C4C4"
        app:layout_constraintStart_toStartOf="@id/btn_create_account"
        app:layout_constraintTop_toTopOf="@id/tv_or"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toStartOf="@id/tv_or"/>

    <View
        android:id="@+id/separator_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:background="#FFC4C4C4"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toTopOf="@id/tv_or"
        app:layout_constraintBottom_toBottomOf="@id/tv_or"
        app:layout_constraintEnd_toEndOf="@id/btn_create_account"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:backgroundTint="@color/primary_80"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/primary_100"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/btn_create_account"
        app:layout_constraintEnd_toEndOf="@id/btn_create_account"
        app:layout_constraintTop_toBottomOf="@id/tv_or" />

    <TextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter"
        android:text="@string/already_have_an_account"
        android:textColor="@color/font_disable_2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/btn_sign_up_google"
        app:layout_constraintEnd_toEndOf="@id/btn_sign_up_google"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up_google" />


</androidx.constraintlayout.widget.ConstraintLayout>