<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_arrow_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_arrow_back_black_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/iv_arrow_back"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow_back"/>

    <TextView
        android:id="@+id/tv_sign_in_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sign_in_description"
        android:fontFamily="@font/inter"
        android:textColor="@color/font_disable_2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in"/>
    
    <ImageView
        android:id="@+id/iv_sign_in"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:src="@drawable/ic_sign_in_image"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_description"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/email"
        android:textColor="@color/font_active"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_sign_in_description"
        app:layout_constraintTop_toBottomOf="@+id/iv_sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxBackgroundColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textEmailAddress"
            android:textColor="@color/font_active"
            android:textColorHint="@color/font_disable_2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/password"
        android:textColor="@color/font_active"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/til_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxBackgroundColor="#EEEEEE"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textPassword"
            android:textColor="@color/font_active"
            android:textColorHint="@color/font_disable_2"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="-12dp"
        app:buttonTint="@color/primary_100"
        app:layout_constraintStart_toStartOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/til_password"/>

    <TextView
        android:id="@+id/tv_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-8dp"
        android:text="@string/remember_me"
        android:fontFamily="@font/inter"
        android:textSize="12sp"
        android:textColor="@color/font_disable_2"
        app:layout_constraintTop_toTopOf="@id/cb_remember_me"
        app:layout_constraintBottom_toBottomOf="@id/cb_remember_me"
        app:layout_constraintStart_toEndOf="@id/cb_remember_me"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/inter"
        android:textSize="12sp"
        android:textColor="@color/primary_100"
        app:layout_constraintTop_toTopOf="@id/tv_remember_me"
        app:layout_constraintBottom_toBottomOf="@id/tv_remember_me"
        app:layout_constraintEnd_toEndOf="@id/til_password"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:backgroundTint="@color/primary_100"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_remember_me"
        app:layout_constraintTop_toBottomOf="@+id/cb_remember_me" />

    <TextView
        android:id="@+id/tv_do_not_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/font_disable_2"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />
    
</androidx.constraintlayout.widget.ConstraintLayout>